2002-06-03  Federico Mena Quintero  <federico@ximian.com>

	* gdk/gdkpixbuf-drawable.c (rgb565msb): Fix the MSB -> MSB case.
	Fixes #79190.

Sat Jun  1 10:43:28 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_render): 
	add missing flag, #83796


2002-05-30  Michael Meeks  <michael@ximian.com>

	* gtk/gtkmenu.c (gtk_menu_popup): destroy the transfer
	window if the grab fails so we don't get events on this
	window after the menu is finalized with a duff GtkWidget
	pointer: #82366

Mon May 28 13:28:10  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gtk/gtktextbuffer.c (selection_data_get_buffer): Check if the owner
	got is of type GDK_WINDOW_FOREIGN. If so the owner is not in-process,
	and so return NULL.

2002-05-24  Michael Meeks  <michael@ximian.com>

	* gtk/gtkmain.c (_gtk_find_module): don't leak the paths.

Thu May 30 07:59:38 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkmenu.c (gtk_menu_style_set): add
	gtk_menu_style_set(). fixes #79345

2002-05-29  Dave Camp  <dave@ximian.com>

	* gtk/gtkdnd.c (gtk_drag_end): Disconnect from keypress events.

2002-05-28  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwindow.c (gtk_window_move): Markup fixes

	* gtk/gtkrc.c (gtk_rc_get_module_dir): Markup fixes.
	
	* gdk/x11/gdkcursor-x11.c (gdk_cursor_new_for_screen): Update docs
	for Docbook XML.

2002-05-27  Daniel Elstner  <daniel.elstner@gmx.net>

	[ merge from stable ]

	Fixes for #83190

	* gtk/gtktreedatalist.h (_GtkTreeDataList::data): Add missing
	fields to anonymous union: glong, gulong, gint64 and guint64.
	This is an internal header file, so it should not affect ABI
	or API compatibility.

	* gtk/gtktreedatalist.c (_gtk_tree_data_list_node_to_value):
	Implement missing support for glong, gulong, gint64 and guint64
	fundamental types.  Use data.v_uint instead of data.v_int for
	G_TYPE_FLAGS, as GValue does.
	(_gtk_tree_data_list_value_to_node): ditto