@@ -304,13 +304,12 @@ gtk_cell_renderer_toggle_render (GtkCellRenderer *cell,
       else
 	state = GTK_STATE_ACTIVE;
     }
-  if (celltoggle->activatable)
-    {
-      state |= GTK_STATE_NORMAL;
-    }
   else
     {
-      state |= GTK_STATE_INSENSITIVE;
+      if (celltoggle->activatable)
+        state = GTK_STATE_NORMAL;
+      else
+        state = GTK_STATE_INSENSITIVE;
     }
 
   if (celltoggle->radio)
